# music_mastery

./: .gitignore  LICENSE  README.md  pyproject.toml
macOS/: Package.swift  README.md
macOS/Sources/MusicMasteryCore/: AudioSupport.swift  MasteringControls.swift  MasteringEngine.swift  PresetStore.swift
macOS/Sources/MusicMasteryMacOS/: Components.swift  ContentView.swift  MasteringViewModel.swift  MusicMasteryApp.swift
macOS/Tests/MusicMasteryCoreTests/: MasteringCoreTests.swift
macOS/scripts/: build_macos_app.sh
scripts/: build.ps1  clean.ps1
src/mastery_native/: __init__.py  __main__.py  app_state.py  audio_files.py  engine.py  live_audio.py  main.py  preset_store.py  toolchain.py  window.py
tests/: test_app_state.py  test_audio_files.py  test_engine.py  test_live_audio.py  test_preset_store.py  test_window.py
