[project]
name = "music-mastery-native"
version = "0.1.0"
description = "Fast native Windows mastering desktop app for Music Mastery"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["audio", "mastering", "music", "pyside6", "windows"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = ["PySide6>=6.10.0"]

[project.scripts]
music-mastery = "mastery_native.main:main"

[project.urls]
Homepage = "https://github.com/Shudufhadzo/music_mastery"
Repository = "https://github.com/Shudufhadzo/music_mastery"
Issues = "https://github.com/Shudufhadzo/music_mastery/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
